# surface-mesh-estimation

./: Cargo.toml  README.md
src/: draw_triangles.rs  main.rs  marching_cubes.rs  nearest_points.rs  process_points.rs  surface_nets.rs  utils.rs
src/shaders/: render.fs  render.vs  shader.fs  shader.vs  shadows.fs  shadows.vs  shadows_debug.fs  shadows_debug.vs
