[package]
name = "normal-estimation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
clap = { version = "4.4.7", features = ["derive"] }
glium = "0.34.0"
glutin = "0.31.3"
glutin-winit = "0.4.2"
image = "0.24.7"
kd-tree = { version = "0.5.1", features = ["rayon"] }
nalgebra = "0.32.3"
num_cpus = "1.16.0"
rayon = "1.8.0"
typenum = "1.17.0"
winit = "0.29.0"
